# gc-arena

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml
derive/: Cargo.toml
src/: allocator_api.rs  barrier.rs  collect.rs  context.rs  enum_map.rs  gc.rs  gc_weak.rs  indexmap.rs  lib.rs  metrics.rs  slotmap.rs  smallvec.rs
tests/: tests.rs
tests/ui/: bad_collect_bound.stderr  bad_write_field_projections.stderr
