[package]
name = "gc-arena"
description = "safe, incrementally garbage collected arenas"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[workspace]
resolver = "2"
members = ["derive"]

[workspace.package]
version = "0.5.3"
authors = [
    "kyren <catherine@kyju.org>",
    "moulins",
    "Aaron Hill <aa1ronham@gmail.com>",
]
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/kyren/gc-arena"

[features]
default = ["std"]
std = []
tracing = ["dep:tracing"]
allocator-api2 = ["dep:allocator-api2", "hashbrown?/allocator-api2"]

[dependencies]
allocator-api2 = { version = "0.2.21", optional = true, default-features = false, features = [
    "alloc",
] }
enum-map = { version = "2.7.3", optional = true, default-features = false }
gc-arena-derive = { path = "./derive", version = "0.5.3" }
hashbrown = { version = "0.16.1", optional = true, default-features = false }
indexmap = { version = "2.13.0", optional = true, default-features = false }
slotmap = { version = "1.1.1", optional = true, default-features = false }
smallvec = { version = "1.15.1", optional = true, default-features = false }
tracing = { version = "0.1.44", optional = true, default-features = false }

[dev-dependencies]
rand = { version = "0.10.0", features = ["thread_rng"] }
trybuild = "1.0.116"
